PROD-9370 - Fix Inline select field spacing issue

--- a/src/js/admin/settings/styles/scss/screens/_feature_settings.scss
+++ b/src/js/admin/settings/styles/scss/screens/_feature_settings.scss
@@ -537,7 +537,7 @@
 
             .bb-admin-settings-form__inline-select {
                 margin: 0 6px 0 2px;
-                padding: 4px 8px;
+                padding: 4px 24px 4px 8px;
                 min-width: 90px;
                 min-height: auto;
             }
